deploy/sevice.yaml
kind: Service
apiVersion: v1
metadata:
  name: http-service-api
spec:
  selector:
    name: deploy-app-api
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
