deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/"
spec:
  rules:
  - host: api.test.pl
    http:
      paths:
      - backend:
          service:
            name: http-service-api
            port:
              number: 80
        pathType: Prefix
        path: /()(.*)
